--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR-GEN</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
@@ -33,6 +33,6 @@
             <a href="https://www.instagram.com/abhi._.nay" target="_blank">Instagram</a>
         </p>
     </footer>
-        <script defer src="./script.js"></script>
+        <script defer src="script.js"></script>
 </body>
 </html>
